Fix datepicker popup not fully aligned on mobile

--- a/src/styles/components/datepicker.scss
+++ b/src/styles/components/datepicker.scss
@@ -62,7 +62,7 @@
 		}
 
 		@media screen and (max-width: ($tablet)) {
-			width: calc(100vw - 4rem);
+			width: calc(100vw - 5rem);
 		}
 	}
 }
